cmake_minimum_required (VERSION 2.8)
project (WONAPI)

add_library (WONAPI STATIC
	WONAuth/Auth.cpp
	#WONAuth/Auth2Certificate.cpp
	#WONAuth/AuthBase.cpp
	#WONAuth/AuthCertificate.cpp
	#WONAuth/AuthContext.cpp
	#WONAuth/AuthPeerData.cpp
	#WONAuth/AuthPubKeyBlock.cpp
	#WONAuth/AuthSession.cpp
	#WONAuth/CDKey.cpp
	#WONAuth/GetCertOp.cpp
	#WONAuth/PeerAuthClient.cpp
	#WONAuth/PeerAuthOp.cpp
	#WONAuth/PeerAuthServer.cpp
	#WONAuth/PeerAuthServerOp.cpp
	#WONCommon/AsyncOp.cpp
	#WONCommon/AsyncOpContainer.cpp
	#WONCommon/AsyncOpTracker.cpp
	#WONCommon/ByteBuffer.cpp
	WONCommon/Common.cpp
	#WONCommon/CommonSmall.cpp
	#WONCommon/CRC.cpp
	#WONCommon/Event.cpp
	#WONCommon/Event_Linux.cpp
	#WONCommon/Event_Mac.cpp
	#WONCommon/Event_Windows.cpp
	#WONCommon/FileReader.cpp
	#WONCommon/FileWriter.cpp
	#WONCommon/Md5.cpp
	#WONCommon/MiscUtil.cpp
	#WONCommon/Platform.cpp
	#WONCommon/Platform_Linux.cpp
	#WONCommon/Platform_Mac.cpp
	#WONCommon/Platform_Windows.cpp
	#WONCommon/ReadBuffer.cpp
	#WONCommon/RegKey.cpp
	#WONCommon/RegKey_Windows.cpp
	#WONCommon/StringUtil.cpp
	#WONCommon/Thread.cpp
	#WONCommon/TimerThread.cpp
	#WONCommon/WONConsole.cpp
	#WONCommon/WONFile.cpp
	#WONCommon/WriteBuffer.cpp
	#WONCrypt/BigInteger.cpp
	#WONCrypt/Blowfish.cpp
	WONCrypt/Crypt.cpp
	#WONCrypt/ElGamal.cpp
	#WONCrypt/MD5Digest.cpp
	#WONCrypt/Random.cpp
	#WONDB/ContestCallOp.cpp
	#WONDB/CreateAccountOp.cpp
	WONDB/DB.cpp
	#WONDB/DBProxyOp.cpp
	#WONDB/EventReportOp.cpp
	#WONDB/GetAccountOp.cpp
	#WONDB/GetProfileOp.cpp
	#WONDB/GetUserIdFromNameOp.cpp
	#WONDB/ProfileData.cpp
	#WONDB/RequestAccountInfoEmailOp.cpp
	#WONDB/RequestPasswordEmailOp.cpp
	#WONDB/SetProfileOp.cpp
	#WONDB/UpdateAccountOp.cpp
	#WONDir/AddEntityOp.cpp
	WONDir/Dir.cpp
	#WONDir/DirEntity.cpp
	#WONDir/DirEntityReplyParser.cpp
	#WONDir/EntityClearDataObjectsOp.cpp
	#WONDir/EntityModifyDataObjectsOp.cpp
	#WONDir/EntitySetDataObjectsOp.cpp
	#WONDir/GetDirOp.cpp
	#WONDir/GetEntityRequest.cpp
	#WONDir/GetMultiDirOp.cpp
	#WONDir/GetServiceOp.cpp
	#WONDir/ModifyEntityOp.cpp
	#WONDir/RemoveEntityOp.cpp
	#WONDir/RenameEntityOp.cpp
	#WONDir/RenewEntityOp.cpp
	#WONMisc/CheckValidVersionOp.cpp
	#WONMisc/DetectFirewallOp.cpp
	#WONMisc/DNSTestOp.cpp
	#WONMisc/FindPatchOp.cpp
	#WONMisc/FTPGetOp.cpp
	#WONMisc/GameSpySupport.cpp
	#WONMisc/GetMOTDOp.cpp
	#WONMisc/GetPatchListOp.cpp
	#WONMisc/GetVersionOp.cpp
	WONMisc/gqueryreporting.c
	#WONMisc/HTTPGetOp.cpp
	#WONMisc/MediaMetrix.cpp
	WONMisc/Misc.cpp
	WONMisc/nonport.c
	#WONRouting/RoutingAbortServShutdownOp.cpp
	#WONRouting/RoutingBanClientOp.cpp
	#WONRouting/RoutingBecomeModeratorOp.cpp
	#WONRouting/RoutingGetBadUserListOp.cpp
	#WONRouting/RoutingMuteClientOp.cpp
	#WONRouting/RoutingSendServerAlertOp.cpp
	#WONRouting/RoutingServerAlertOp.cpp
	#WONRouting/RoutingServShutdownAbortOp.cpp
	#WONRouting/RoutingServShutdownStartOp.cpp
	#WONRouting/RoutingStartServShutdownOp.cpp
	#WONRouting/RoutingYouWereBannedOp.cpp
	#WONRouting/RoutingYouWereMutedOp.cpp
	#WONRouting/RoutingClientFlagsChangedOp.cpp
	#WONRouting/RoutingClientJoinedServerOp.cpp
	#WONRouting/RoutingClientLeftServerOp.cpp
	#WONRouting/RoutingDetectFirewallOp.cpp
	#WONRouting/RoutingDisconnectClientOp.cpp
	#WONRouting/RoutingGetClientListOp.cpp
	#WONRouting/RoutingPeerChatOp.cpp
	#WONRouting/RoutingPeerDataOp.cpp
	#WONRouting/RoutingRegisterClientOp.cpp
	#WONRouting/RoutingSendChatOp.cpp
	#WONRouting/RoutingSendComplaintOp.cpp
	#WONRouting/RoutingSendDataOp.cpp
	#WONRouting/RoutingSetClientFlagsOp.cpp
	#WONRouting/RoutingCreateDataObjectOp.cpp
	#WONRouting/RoutingDataObjectCreatedOp.cpp
	#WONRouting/RoutingDataObjectDeletedOp.cpp
	#WONRouting/RoutingDataObjectModifiedOp.cpp
	#WONRouting/RoutingDeleteDataObjectOp.cpp
	#WONRouting/RoutingModifyDataObjectOp.cpp
	#WONRouting/RoutingReadDataObjectOp.cpp
	#WONRouting/RoutingUnsubDataObjectOp.cpp
	#WONRouting/RoutingAcceptClientOp.cpp
	#WONRouting/RoutingCancelJoinGroupOp.cpp
	#WONRouting/RoutingClientJoinedGroupOp.cpp
	#WONRouting/RoutingClientLeftGroupOp.cpp
	#WONRouting/RoutingCreateGroupOp.cpp
	#WONRouting/RoutingGetGroupListOp.cpp
	#WONRouting/RoutingGetGroupListReqOp.cpp
	#WONRouting/RoutingGetMembersOfGroupOp.cpp
	#WONRouting/RoutingGroupCaptChangedOp.cpp
	#WONRouting/RoutingGroupCreatedOp.cpp
	#WONRouting/RoutingGroupDeletedOp.cpp
	#WONRouting/RoutingGroupFlagsChangedOp.cpp
	#WONRouting/RoutingGroupInvitationOp.cpp
	#WONRouting/RoutingGroupJoinAttemptOp.cpp
	#WONRouting/RoutingGroupMPlyrsChangedOp.cpp
	#WONRouting/RoutingGroupNameChangedOp.cpp
	#WONRouting/RoutingGroupObserverCountOp.cpp
	#WONRouting/RoutingInviteClientOp.cpp
	#WONRouting/RoutingJoinGroupOp.cpp
	#WONRouting/RoutingLeaveGroupOp.cpp
	#WONRouting/RoutingMemberFlagsChangedOp.cpp
	#WONRouting/RoutingRelinquishCaptainOp.cpp
	#WONRouting/RoutingSetGroupFlagsOp.cpp
	#WONRouting/RoutingSetGroupMaxPlayersOp.cpp
	#WONRouting/RoutingSetGroupNameOp.cpp
	#WONRouting/RoutingSetGroupPasswordOp.cpp
	WONRouting/Routing.cpp
	#WONRouting/RoutingConnection.cpp
	#WONRouting/RoutingDerivedServerOp.cpp
	#WONRouting/RoutingOp.cpp
	#WONRouting/SmartRoutingConnection.cpp
	#WONServer/MultiPingOp.cpp
	#WONServer/PingOp.cpp
	WONServer/Server.cpp
	#WONServer/ServerConnection.cpp
	#WONServer/ServerContext.cpp
	#WONServer/ServerOp.cpp
	#WONServer/ServerRequestOp.cpp
	#WONSocket/AcceptOp.cpp
	#WONSocket/AsyncSocket.cpp
	#WONSocket/BlockingSocket.cpp
	#WONSocket/CloseOp.cpp
	#WONSocket/ConnectOp.cpp
	#WONSocket/IPAddr.cpp
	#WONSocket/NetStats.cpp
	#WONSocket/QueueSocket.cpp
	#WONSocket/RecvBytesFromOp.cpp
	#WONSocket/RecvBytesOp.cpp
	#WONSocket/RecvCRMsgOp.cpp
	#WONSocket/RecvMsgOp.cpp
	#WONSocket/SendBytesOp.cpp
	#WONSocket/SendBytesToOp.cpp
	#WONSocket/SendMsgOp.cpp
	WONSocket/Socket.cpp
	#WONSocket/SocketOp.cpp
	#WONSocket/SocketThread.cpp
	#WONSocket/SocketThreadEx.cpp
	#WONSocket/SocketThreadEx_Linux.cpp
	#WONSocket/SocketThreadEx_Windows.cpp
	#WONSocket/SocketThreadSimple.cpp
	#WONSocket/SocketThreadWinsock2.cpp
	WONAPI.cpp
	WONStatus.cpp)
add_definitions (-D_CRT_SECURE_NO_WARNINGS -D__WON_MASTER_CPP_BUILD__)
include_directories (.
	WONAuth
	WONCommon
	WONConfig
	WONCrypt
	WONDB
	WONDir
	WONMisc
	WONRouting
	WONServer
	WONSocket
	WONUpdate)