cmake_minimum_required (VERSION 2.8)
project (NOLF2_ClientShellDLL)

add_library (NOLF2_ClientShellDLL SHARED
	../ClientShellShared/ActivateObjectFX.cpp
	../../Shared/ActivateTypeMgr.cpp
	../../Shared/Animator.cpp
	../../Shared/AssertMgr.cpp
	../../Shared/AttachButeMgr.cpp
	../ClientShellShared/BaseLineSystemFX.cpp
	../ClientShellShared/BaseMenu.cpp
	../ClientShellShared/BaseParticleSystemFX.cpp
	../ClientShellShared/BasePolyDrawFX.cpp
	../ClientShellShared/BaseScaleFX.cpp
	../ClientShellShared/BaseScreen.cpp
	../ClientShellShared/BeamFX.cpp
	../ClientShellShared/BodyFX.cpp
	../../Shared/ButeListReader.cpp
	../ClientShellShared/BulletTrailFX.cpp
	../ClientShellShared/CameraOffsetMgr.cpp
	../ClientShellShared/ChainedFX.cpp
	../ClientShellShared/CharacterFX.cpp
	../ClientShellShared/CheatMgr.cpp
	../ClientShellShared/client_physics.cpp
	../ClientShellShared/ClientButeMgr.cpp
	../ClientShellShared/ClientFXDB.cpp
	../ClientShellShared/ClientFXMgr.cpp
	../ClientShellShared/ClientInfoMgr.cpp
	../ClientShellShared/ClientMultiplayerMgr.cpp
	../ClientShellShared/ClientSaveLoadMgr.cpp
	../../Shared/ClientServerShared.cpp
	../ClientShellShared/ClientSoundMgr.cpp
	../ClientShellShared/ClientTrackedNodeContext.cpp
	../ClientShellShared/ClientTrackedNodeMgr.cpp
	../ClientShellShared/ClientUtilities.cpp
	../ClientShellShared/ClientWeapon.cpp
	../ClientShellShared/ClientWeaponMgr.cpp
	../ClientShellShared/ClientWeaponUtils.cpp
	../ClientShellShared/CMoveMgr.cpp
	../../Shared/CommonUtilities.cpp
	../../Shared/CRC32.cpp
	../ClientShellShared/Credits.cpp
	../ClientShellShared/CursorMgr.cpp
	../ClientShellShared/DamageFXMgr.cpp
	../../Shared/DamageTypes.cpp
	../ClientShellShared/DeathFX.cpp
	../ClientShellShared/DebrisFX.cpp
	../../Shared/DebrisMgr.cpp
	../../Shared/DebugLine.cpp
	../ClientShellShared/DebugLineFX.cpp
	../../Shared/DebugNew.cpp
	../ClientShellShared/DoomsdayPieceFX.cpp
	../ClientShellShared/DynamicLightFX.cpp
	../ClientShellShared/DynamicOccluderVolumeFX.cpp
	../ClientShellShared/ExplosionFX.cpp
	../ClientShellShared/FireFX.cpp
	../ClientShellShared/FlashLight.cpp
	../ClientShellShared/FullScreenTint.cpp
	../../Shared/FXButeMgr.cpp
	../../Shared/FXStructs.cpp
	../ClientShellShared/GadgetDisabler.cpp
	../ClientShellShared/GadgetTargetFX.cpp
	../../Shared/GameAlloc.cpp
	../../Shared/GameButeMgr.cpp
	../ClientShellShared/GameClientShell.cpp
	../ClientShellShared/GameSettings.cpp
	../ClientShellShared/GibFX.cpp
	../ClientShellShared/GlobalClientMgr.cpp
	../../Shared/GlobalMgr.cpp
	../ClientShellShared/HeadBobMgr.cpp
	../ClientShellShared/HitBox.cpp
	../ClientShellShared/HUDBar.cpp
	../ClientShellShared/HUDChatInput.cpp
	../ClientShellShared/HUDDamage.cpp
	../ClientShellShared/HUDDecision.cpp
	../ClientShellShared/HUDDisplayMeter.cpp
	../ClientShellShared/HUDDistance.cpp	
	../ClientShellShared/HUDMessage.cpp
	../ClientShellShared/HUDMessageQueue.cpp
	../ClientShellShared/HUDMeter.cpp
	../ClientShellShared/HUDMgr.cpp
	../ClientShellShared/HUDMissionText.cpp
	../ClientShellShared/HUDPaused.cpp
	../ClientShellShared/HUDPopup.cpp
	../ClientShellShared/HUDRadar.cpp
	../ClientShellShared/HUDScores.cpp
	../ClientShellShared/HUDSubtitles.cpp
	../ClientShellShared/HUDTransmission.cpp
	../../../sdk/inc/iltbaseclass.cpp
	../ClientShellShared/IntelItemList.cpp
	../ClientShellShared/InterfaceMgr.cpp
	../ClientShellShared/InterfaceResMgr.cpp
	../ClientShellShared/InterfaceSurfMgr.cpp
	../ClientShellShared/InterfaceTimer.cpp
	../ClientShellShared/IpMgr.cpp
	../ClientShellShared/JumpVolumeFX.cpp
	../../Shared/KeyMgr.cpp
	../ClientShellShared/LaserBeam.cpp
	../ClientShellShared/LaserTriggerFX.cpp
	../ClientShellShared/LayoutMgr.cpp
	../ClientShellShared/LeanMgr.cpp
	../ClientShellShared/LensFlareFX.cpp
	../ClientShellShared/LightFX.cpp
	../ClientShellShared/LightGroupFX.cpp
	../ClientShellShared/LightningFX.cpp
	../ClientShellShared/LightScaleMgr.cpp
	../ClientShellShared/LineSystemFX.cpp
	../ClientShellShared/LoadingScreen.cpp
	../../../sdk/inc/LTEulerAngles.cpp
	../../../sdk/inc/ltmodule.cpp
	../../../sdk/inc/ltobjref.cpp
	../../../sdk/inc/ltquatbase.cpp
	../ClientShellShared/MarkSFX.cpp
	../ClientShellShared/MenuIntel.cpp
	../ClientShellShared/MenuInventory.cpp
	../ClientShellShared/MenuKeys.cpp
	../ClientShellShared/MenuMgr.cpp
	../ClientShellShared/MenuMission.cpp
	../ClientShellShared/MenuPlayer.cpp
	../ClientShellShared/MenuSystem.cpp
	../ClientShellShared/MessageBox.cpp
	../ClientShellShared/MineFX.cpp
	../../Shared/MissionButeMgr.cpp
	../ClientShellShared/MissionMgr.cpp
	../../Shared/ModelButeMgr.cpp
	../ClientShellShared/Music.cpp
	../ClientShellShared/MuzzleFlashFX.cpp
	../ClientShellShared/MuzzleFlashParticleFX.cpp
	../../Shared/NetDefs.cpp
	../ClientShellShared/NodeController.cpp
	../ClientShellShared/NodeLinesFX.cpp
	../ClientShellShared/ObjectiveControl.cpp
	../ClientShellShared/ObjSpriteFX.cpp
	../../Shared/ParsedMsg.cpp
	../ClientShellShared/ParticleExplosionFX.cpp
	../ClientShellShared/ParticleShowerFX.cpp
	../ClientShellShared/ParticleSystemFX.cpp
	../ClientShellShared/ParticleTrailFX.cpp
	../ClientShellShared/ParticleTrailSegmentFX.cpp
	../ClientShellShared/PerformanceMgr.cpp
	../ClientShellShared/PerformanceTest.cpp
	../ClientShellShared/PickupItemFX.cpp
	../ClientShellShared/PlayerCamera.cpp
	../ClientShellShared/PlayerLureFX.cpp
	../ClientShellShared/PlayerMgr.cpp
	../ClientShellShared/PlayerSoundFX.cpp
	../ClientShellShared/PlayerStats.cpp
	../ClientShellShared/PlayerVehicleFX.cpp
	../ClientShellShared/PlayerViewAttachmentMgr.cpp
	../ClientShellShared/PolyDebrisFX.cpp
	../ClientShellShared/PolyGridFX.cpp
	../ClientShellShared/PolyLineFX.cpp
	../ClientShellShared/PopupMgr.cpp
	../ClientShellShared/PopupText.cpp
	../ClientShellShared/ProfileMgr.cpp
	../../Shared/ProfileUtils.cpp
	../ClientShellShared/ProjectileFX.cpp
	../ClientShellShared/PVFXMgr.cpp
	../ClientShellShared/RadarObjectFX.cpp
	../../Shared/RadarTypeMgr.cpp
	../ClientShellShared/RagDoll.cpp
	../ClientShellShared/RagDollConstraint.cpp
	../ClientShellShared/RandomSparksFX.cpp
	../../Shared/SaveLoadMgr.cpp
	../ClientShellShared/ScatterFX.cpp
	../../Shared/ScmdConsole.cpp
	../ClientShellShared/ScmdConsoleDriver_CShell.cpp
	../ClientShellShared/ScreenMgr.cpp
	../ClientShellShared/ScreenPostload.cpp
	../ClientShellShared/ScreenPreload.cpp
	../ClientShellShared/ScreenSpriteMgr.cpp
	../ClientShellShared/ScreenTintMgr.cpp
	../ClientShellShared/Searcher.cpp
	../../Shared/SearchItemMgr.cpp
	../ClientShellShared/SearchLightFX.cpp
	../ClientShellShared/SFXMgr.cpp
	../../Shared/SharedFXStructs.cpp
	../../Shared/SharedMission.cpp
	../../Shared/SharedScoring.cpp
	../ClientShellShared/ShellCasingFX.cpp
	../ClientShellShared/SkillControl.cpp
	../../Shared/SkillsButeMgr.cpp
	../ClientShellShared/SmokeFX.cpp
	../ClientShellShared/SnowFX.cpp
	../../Shared/SoundButeMgr.cpp
	../../Shared/SoundFilterMgr.cpp
	../ClientShellShared/SoundFX.cpp
	../../Shared/SoundMgr.cpp
	../ClientShellShared/Sparam.cpp
	../ClientShellShared/SpecialFXList.cpp
	../ClientShellShared/sprinklesfx.cpp
	../../Shared/stacktrace.cpp
	../ClientShellShared/StdAfx.cpp
	../ClientShellShared/SteamFX.cpp
	../../Shared/SurfaceFunctions.cpp
	../../Shared/SurfaceMgr.cpp
	../ClientShellShared/TargetMgr.cpp
	../../Shared/TeamMgr.cpp
	../../Shared/TemplateList.cpp
	../ClientShellShared/TextureFXMgr.cpp
	../ClientShellShared/TimedText.cpp
	../ClientShellShared/TracerFX.cpp
	../../Shared/TrackedNode.cpp
	../../Shared/TrackedNodeContext.cpp
	../../Shared/TrackedNodeControlFn.cpp
	../../Shared/TrackedNodeMgr.cpp
	../ClientShellShared/TransitionFXMgr.cpp
	../ClientShellShared/TriggerFX.cpp
	../../Shared/TriggerTypeMgr.cpp
	../../Shared/UberAssert.cpp
	../ClientShellShared/VehicleMgr.cpp
	../../Shared/VersionMgr.cpp
	../ClientShellShared/VisionModeMgr.cpp
	../ClientShellShared/VKDefs.cpp
	../../Shared/WaveFn.cpp
	../ClientShellShared/WeaponChooser.cpp
	../ClientShellShared/WeaponFX.cpp
	../../Shared/WeaponMgr.cpp
	../ClientShellShared/WeatherFX.cpp
	../../Shared/WinUtil.cpp
	GlobalsInit.cpp
	HUDAir.cpp
	HUDAmmo.cpp
	HUDCarrying.cpp
	HUDChooser.cpp
	HUDCompass.cpp
	HUDCrosshair.cpp
	HUDDamageDir.cpp
	HUDDoomsday.cpp
	HUDHealth.cpp
	HUDHiding.cpp
	HUDHidingBar.cpp
	HUDObjectives.cpp
	HUDProgressBar.cpp
	HUDRadio.cpp
	HUDRespawn.cpp
	ScreenAudio.cpp
	ScreenConfigure.cpp
	ScreenControls.cpp
	ScreenCrosshair.cpp
	ScreenDisplay.cpp
	ScreenEndCoopMission.cpp
	ScreenEndDMMission.cpp
	ScreenEndMission.cpp
	ScreenFailure.cpp
	ScreenGame.cpp
	ScreenHost.cpp
	ScreenHostDDOptions.cpp
	ScreenHostDMOptions.cpp
	ScreenHostLevels.cpp
	ScreenHostMission.cpp
	ScreenHostOptions.cpp
	ScreenHostTDMOptions.cpp
	ScreenHostWeapons.cpp
	ScreenJoin.cpp
	ScreenJoinLAN.cpp
	ScreenJoystick.cpp
	ScreenKeyboard.cpp
	ScreenLoad.cpp
	ScreenMain.cpp
	ScreenMouse.cpp
	ScreenMulti.cpp
	ScreenOptions.cpp
	ScreenPerformance.cpp
	ScreenPlayer.cpp
	ScreenPlayerSkills.cpp
	ScreenPlayerTeam.cpp
	ScreenProfile.cpp
	ScreenSave.cpp
	ScreenSingle.cpp
	ScreenTeam.cpp
	Stdafx.cpp
	TO2ClientWeaponAllocator.cpp
	TO2GameClientShell.cpp
	TO2HUDMgr.cpp
	TO2InterfaceMgr.cpp
	TO2LayoutMgr.cpp
	../../Shared/TO2/TO2MissionButeMgr.cpp
	TO2PlayerMgr.cpp
	TO2PlayerStats.cpp
	TO2ScreenMgr.cpp
	../../Shared/TO2/TO2VersionMgr.cpp)
set_target_properties(NOLF2_ClientShellDLL 
	PROPERTIES OUTPUT_NAME CShell)
add_definitions (-D_CLIENTBUILD -DNOPS2 -DMEMTRACK_CLIENT)
include_directories (../ClientShellShared
	../../Shared 
	../../Shared/TO2
	../../../sdk/inc
	../../../libs/MFCStub
	../../../libs/stdlith
	../../../libs/ButeMgr
	../../../libs/CryptMgr
	../../../libs/lith
	../../../libs/RegMgr
	../../../libs/LTGUIMgr
	../../../libs/ServerDir
	../../ClientRes/Shared
	../../ClientRes/TO2)
target_link_libraries(NOLF2_ClientShellDLL
	MFCStub
	Lib_StdLith
	ButeMgr
	CryptMgr
	Lib_Lith
	RegMgr
	LTGUIMgr
	ServerDir
	winmm)
	
if(MSVC)
	set_target_properties(NOLF2_ClientShellDLL PROPERTIES COMPILE_FLAGS "/wd4996")
endif(MSVC)